# Hosting-React-App-using-ESP32

./: .gitignore  Readme.md  partitions.csv
components/network/: CMakeLists.txt  Kconfig.projbuild  network.c
components/network/include/: network.h
components/vfs_storage/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  vfs_storage.c
components/vfs_storage/include/: vfs_storage.h
components/webpage/: CMakeLists.txt  webpage.c
components/webpage/include/: webpage.h
front/web-demo/: index.html  package-lock.json  package.json
front/web-demo/src/: App.css  App.tsx
front/web-demo/src/components/: Card.tsx  Footer.tsx  NavBar.tsx
front/web-demo/src/services/: api.ts
front/web-demo/src/views/: Chart.tsx  Home.tsx  Light.tsx
main/: main.c
